--- a/serverless.yml
+++ b/serverless.yml
@@ -86,3 +86,6 @@ functions:
           method: delete
           cors: true
           authorizer: aws_iam
+
+resources:
+  - ${file(resources/api-gateway-errors.yml)}
