corrigiendo conf CORS
- se modifica token en minuscala en api-gateway-errors
- se agrega resources al principio de serverless.yml para
  verificarlo antes de compilar y empaquetar las funciones

--- a/resources/api-gateway-errors.yml
+++ b/resources/api-gateway-errors.yml
@@ -1,6 +1,6 @@
 Resources:
   GatewayResponseDefault4XX:
-    type: 'AWS::ApiGateway::GatewayResponse'
+    Type: 'AWS::ApiGateway::GatewayResponse'
     Properties:
       ResponseParameters:
         gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
